--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+
+
+/* .form-button{
+  height: 35px;
+padding-left: 10px;
+border: 2px solid blueviolet;
+cursor: pointer;
+
+
+} */
+/* .form-input{
+height: 35px;
+margin-bottom: 20px;
+padding-left: 10px;
+border: 2px solid blueviolet;
+} */
+/* .signup{
+height:  400px;
+width: 350px;
+text-align: center;
+
+} */
+
